<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background_main"
    tools:context=".PasswordActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/enterOrganisationLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="41dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="41dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/enterOrganisation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enterOrganisation"
            android:importantForAutofill="no"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/enterUsernameLayout"
        android:layout_width="329dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="@+id/enterOrganisationLayout"
        app:layout_constraintStart_toStartOf="@+id/enterOrganisationLayout"
        app:layout_constraintTop_toBottomOf="@+id/enterOrganisationLayout">

        <EditText
            android:id="@+id/enterUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enterUsername"
            android:importantForAutofill="no"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/enterPasswordLayout"
        android:layout_width="328dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="@+id/enterUsernameLayout"
        app:layout_constraintStart_toStartOf="@+id/enterUsernameLayout"
        app:layout_constraintTop_toBottomOf="@+id/enterUsernameLayout"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/enterPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enterPassword"
            android:importantForAutofill="no"
            android:inputType="text|textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/addbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:onClick="setSaveButton"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/enterPasswordLayout"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="@+id/enterPasswordLayout"
        app:layout_constraintTop_toBottomOf="@+id/enterPasswordLayout"
        app:layout_constraintVertical_bias="0.055" />

    <ToggleButton
        android:id="@+id/toggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="changeListVisibility"
        android:textAlignment="center"
        android:textOff="@string/show"
        android:textOn="@string/hide"
        app:layout_constraintBottom_toBottomOf="@+id/addbutton"
        app:layout_constraintEnd_toEndOf="@+id/recyclerView"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/addbutton"
        app:layout_constraintTop_toTopOf="@+id/addbutton" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="369dp"
        android:layout_height="418dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/addbutton"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/addbutton"
        app:layout_constraintTop_toBottomOf="@+id/addbutton"
        app:layout_constraintVertical_bias="0.785" />

</androidx.constraintlayout.widget.ConstraintLayout>